# lookout

./: .env.example  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.prod.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
clients/desktop/: package.json
clients/desktop/src/: App.tsx  logger.ts
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: lib.rs
clients/desktop/src-tauri/tests/: legacy_client.rs
clients/desktop/src/components/: AddSessionPage.tsx  AnnouncementBanner.tsx  DesktopRecorder.tsx  UpdateBanner.tsx
clients/desktop/src/hooks/: useAnnouncement.ts  useBackgroundUpdate.ts  useSessionNotifications.ts  useUpdateCheck.ts
clients/react/: API.md  package.json  tsup.config.ts
clients/react/src/: LookoutProvider.tsx  types.ts
clients/react/src/api/: client.ts
clients/react/src/components/: Gallery.tsx
clients/react/src/hooks/: captureUtils.ts  computeBestTracked.test.ts  computeBestTracked.ts  useGallery.ts  useLookout.ts  useSessionTimer.test.ts  useSessionTimer.ts  useSilentAudioKeepAlive.ts  useUploader.ts
clients/react/src/ui/: ErrorDisplay.tsx
clients/web/: package.json  vite.config.ts  vitest.config.ts
clients/web/src/: clientInfo.ts
clients/web/src/api/: client.ts
clients/web/src/components/: Recorder.tsx  Result.tsx  StatusBar.tsx
clients/web/src/hooks/: useScreenCapture.ts  useSessionTimer.test.ts  useSessionTimer.ts  useSilentAudioKeepAlive.test.ts  useSilentAudioKeepAlive.ts  useUploader.ts
docs/: integration.md
