[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[package]
name = "lookout-desktop"
version = "0.2.7"
edition = "2021"

[lib]
name = "lookout_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-http = "2.5.7"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-single-instance = "2.4.2"
url = "2"
os_info = "3"
window-vibrancy = "0.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-liquid-glass = "0.1.6"
tauri-plugin-updater = "2"
sentry = "0.38"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"

[target."cfg(target_os = \"linux\")".dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
gstreamer = "0.24.5"
gstreamer-app = "0.24.5"
gstreamer-video = "0.24.5"
