[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Emit debug info (.pdb on MSVC) for release builds so crash offsets can be
# symbolized. Does not change codegen/optimization; debug info ships only in the
# separate .pdb, never in the released binary.
[profile.release]
debug = true

[package]
name = "lookout-desktop"
version = "0.3.5"
edition = "2021"

[lib]
name = "lookout_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-http = "2.5.7"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-single-instance = "2.4.0"
url = "2"
os_info = "3"
window-vibrancy = "0.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-liquid-glass = "0.1.6"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
sentry = "0.38"

[dev-dependencies]
# `test-util` enables tokio's paused-clock (`start_paused`) so retry-backoff
# tests run instantly instead of actually sleeping 2s+4s between attempts.
tokio = { version = "1", features = ["test-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"

[target."cfg(target_os = \"linux\")".dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
gstreamer = "0.24.5"
gstreamer-app = "0.24.5"
gstreamer-video = "0.24.5"
